# tulip-bazel-tools

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go-deps.bzl  go-setup.bzl
rules_addlicense/: README.md  def.bzl  deps.bzl  runner.bash.template
rules_intellij_formatter/: BUILD.bazel  README.md  def.bzl  deps.bzl  runner.bash.template  tulip-code-scheme.xml
rules_ktlint/: README.md  def.bzl  deps.bzl  runner.bash.template
